--- a/packages/app/public/css/estiloLR.css
+++ b/packages/app/public/css/estiloLR.css
@@ -54,8 +54,8 @@ body {
 	border-radius: 20px;
 	position: absolute;
 	align-items: center;
-	top: -30px;
-	left: 100px;
+	top: -20px;
+	left: 70px;
 }
 .login h1 {
 	margin: 0;
@@ -101,6 +101,12 @@ body {
 	height: 40px;
 	color: #fff;
 	font-size: 18px;
+}
+.login2 label {
+	text-transform: uppercase;
+}
+.login2 h1 {
+	text-transform: uppercase;
 }
 .login2 input[type="text"],
 .login2 input[type="password"],
