--- a/packages/app/public/css/menu.css
+++ b/packages/app/public/css/menu.css
@@ -1,41 +1,31 @@
-
-nav.menu{
-    display: none;
-    
+nav.menu {
+	display: none;
 }
-header label{
-    float: right;
-    font-size: 28px;
-    margin: 6px 0;
-    cursor: pointer;
+header label {
+	float: right;
+	font-size: 28px;
+	margin: 6px 0;
+	cursor: pointer;
 }
-.menu{
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    height: 200px;
-    background: #2E2E2E;
+.menu {
+	position: absolute;
+	border-radius: 10px;
+	top: 50px;
+	left: 80%;
+	width: 20%;
+	height: 200px;
+	background: #000;
+	text-align: left;
 }
 .menu a {
-    display: block;
-    color: #fff;
-    height: 50px;
-    text-decoration: none;
-    height: 50px;
-    padding: 15px;
-    border-bottom: 1px solid rgba(255,255,255,0.3);
-    
+	display: block;
+	color: #fff;
+	height: 50px;
+	text-decoration: none;
+	height: 50px;
+	padding: 15px;
+	border-bottom: 1px solid #43a0df;
 }
-.menu a:hover{
-    background: rgba(255,255,255,0.3);
+.menu a:hover {
+	background: rgba(255, 255, 255, 0.3);
 }
-
-
-
-    
-    
-    
-    
-    
-})
