--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,6 +12,18 @@
     
 }
 body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(
+        0deg,
+        #1e1e5d
+        #587ffc
+        #92a5eaf5
+        #e5eaf5
+        #ff8692
+        );           
     font-family: 'Open Sans', sans-serif;
 }
 header{
