--- a/packages/app/public/css/estiloCrearEvento.css
+++ b/packages/app/public/css/estiloCrearEvento.css
@@ -1,26 +1,34 @@
+:root {
+	--blanco: #ffffff;
+	--negro: #000000;
+	--primario: #36bed9;
+	--secundario: #323333;
+	--opcional: #e6e6e6;
+}
 body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	background: linear-gradient(
-		0deg,
-		#1e1e5d,
-		#587ffc,
-		#92a5fd,
-		#e5eaf5,
-		#ff8692
+	background-image: linear-gradient(
+		to top,
+		var(--opcional) 0%,
+		var(--blanco) 100%
 	);
 }
+.sombra {
+	-webkit-box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+	-moz-box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+	box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+}
 .Crear-evento {
-	width: 400px;
-	background: #65b5dd;
-	padding: 70px 30px;
+	width: 500px;
+	background: var(--primario);
+	padding: 40px 30px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 80px;
 	border-radius: 4px;
 	font-family: "bold";
-	color: white;
-	box-shadow: 7px 13px 37px #000;
+	color: var(--blanco);
 }
 .Crear-evento h4 {
 	font-size: 30px;
@@ -28,11 +36,11 @@ body {
 }
 .controls {
 	border: none;
-	border-bottom: 2px solid #fff;
+	border-bottom: 2px solid var(--blanco);
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: #fff;
+	color: var(--blanco);
 	font-size: 20px;
 	width: 100%;
 	margin-bottom: 20px;
@@ -44,19 +52,20 @@ body {
 	line-height: 40px;
 }
 .Crear-evento a {
-	color: white;
+	color: var(--blanco);
 	text-decoration: none;
 }
 .Crear-evento a:hover {
-	color: white;
-	text-decoration: underline;
+	color: var(--negro);
+	text-decoration: none;
 }
+
 .Crear-evento .botons {
 	width: 100%;
-	background: #1f53c5;
+	background: var(--blanco);
 	border: none;
 	padding: 12px;
-	color: white;
+	color: var(--negro);
 	margin: 16px 0;
 	font-size: 16px;
 	border-radius: 20px;
