--- a/packages/app/public/css/estiloLR.css
+++ b/packages/app/public/css/estiloLR.css
@@ -1,22 +1,31 @@
+:root {
+	--blanco: #ffffff;
+	--negro: #000000;
+	--primario: #36bed9;
+	--secundario: #323333;
+	--opcional: #e6e6e6;
+}
 body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(
-		0deg,
-		#1e1e5d,
-		#587ffc,
-		#92a5fd,
-		#e5eaf5,
-		#ff8692
+	background-image: linear-gradient(
+		to top,
+		var(--opcional) 0%,
+		var(--blanco) 100%
 	);
+}
+.sombra {
+	-webkit-box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+	-moz-box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+	box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
 }
 .login {
 	width: 380px;
 	height: 420px;
-	background: #65b5dd;
-	color: #fff;
+	background: var(--primario);
+	color: var(--blanco);
 	top: 50%;
 	left: 50%;
 	position: absolute;
@@ -28,8 +37,8 @@ body {
 .login2 {
 	width: 380px;
 	height: 510px;
-	background: #65b5dd;
-	color: #fff;
+	background: var(--primario);
+	color: var(--blanco);
 	top: 48%;
 	left: 50%;
 	position: absolute;
@@ -41,7 +50,7 @@ body {
 .loginx {
 	height: 80px;
 	width: 90px;
-	background-color: #fff;
+	background-color: var(--blanco);
 	border-radius: 50%;
 	position: absolute;
 	align-items: center;
@@ -54,7 +63,7 @@ body {
 	border-radius: 20px;
 	position: absolute;
 	align-items: center;
-	top: -20px;
+	top: -10px;
 	left: 70px;
 }
 .login h1 {
@@ -66,7 +75,7 @@ body {
 .login2 h1 {
 	margin: 0;
 	padding: 0 0 20px;
-	color: #fff;
+	color: var(--blanco);
 	text-align: center;
 	font-size: 40px;
 }
@@ -79,7 +88,7 @@ body {
 .login2 label {
 	margin: 0;
 	padding: 0;
-	color: #fff;
+	color: var(--blanco);
 	font-weight: bold;
 	display: block;
 }
@@ -95,11 +104,11 @@ body {
 .login input[type="text"],
 .login input[type="password"] {
 	border: none;
-	border-bottom: 2px solid #fff;
+	border-bottom: 2px solid var(--blanco);
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: #fff;
+	color: var(--blanco);
 	font-size: 18px;
 }
 .login2 label {
@@ -113,19 +122,19 @@ body {
 .login2 input[type="number"],
 .login2 input[type="email"] {
 	border: none;
-	border-bottom: 2px solid #fff;
+	border-bottom: 2px solid var(--blanco);
 	background: transparent;
 	outline: none;
 	height: 25px;
-	color: #fff;
+	color: var(--blanco);
 	font-size: 18px;
 }
 .login input[type="submit"] {
 	border: none;
 	outline: none;
 	height: 40px;
-	background: #43a0df;
-	color: #fff;
+	background: var(--blanco);
+	color: var(--negro);
 	font-size: 20px;
 	border-radius: 20px;
 }
@@ -134,8 +143,8 @@ body {
 	outline: none;
 	height: 40px;
 	margin-top: 10px;
-	background: #43a0df;
-	color: #fff;
+	background: var(--blanco);
+	color: var(--negro);
 	font-size: 20px;
 	border-radius: 20px;
 }
@@ -144,9 +153,9 @@ body {
 	border: none;
 	outline: none;
 	border-radius: 10px;
-	border-bottom: 2px, solid #fff;
-	background: #43a0df;
-	color: #fff;
+	border-bottom: 2px, solid var(--blanco);
+	background: var(--blanco);
+	color: var(--negro);
 	font-size: 14px;
 }
 .login a {
@@ -162,8 +171,8 @@ body {
 	color: rgb(107, 106, 106);
 }
 .login a:hover {
-	color: #e8f0f0;
+	color: var(--blanco);
 }
 .login2 a:hover {
-	color: #000;
+	color: var(--blanco);
 }
