--- a/packages/app/public/css/estilos.css
+++ b/packages/app/public/css/estilos.css
@@ -3,6 +3,13 @@
 @import url(img1.css);
 @import url(blog.css);
 @import url(info.css);
+:root {
+	--blanco: #ffffff;
+	--negro: #000000;
+	--primario: #36bed9;
+	--secundario: #323333;
+	--opcional: #e6e6e6;
+}
 
 * {
 	margin: 0;
@@ -15,19 +22,16 @@ body {
 	padding: 0;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(
-		0deg,
-		#1e1e5d,
-		#587ffc,
-		#92a5fd,
-		#e5eaf5,
-		#ff8692
+	background-image: linear-gradient(
+		to top,
+		var(--opcional) 0%,
+		var(--blanco) 100%
 	);
 }
 header {
 	width: 100%;
 	height: 50px;
-	background: #333;
+	background: var(--primario);
 	color: #fff;
 	position: fixed;
 	top: 0;
@@ -37,6 +41,11 @@ header {
 .contenedor {
 	width: 98%;
 	margin: auto;
+}
+.sombra {
+	-webkit-box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+	-moz-box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
+	box-shadow: 3px 11px 14px 0px rgba(0, 0, 0, 0.69);
 }
 h1 {
 	float: left;
@@ -67,28 +76,28 @@ footer .sociales {
 	font-size: 28px;
 }
 footer .sociales label {
-	color: #333;
+	color: var(--secundario);
 	text-decoration: none;
 }
 
 #adopta {
-	background-color: #587ffc;
-	color: #fff;
+	background-color: var(--primario);
+	color: var(--blanco);
 	border: none;
 	cursor: pointer;
 	padding: 10px;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 .rojo {
 	padding: 10px;
 	text-decoration: none;
-	border-radius: 20px;
-	background-color: #43a0df;
-	color: white;
+	border-radius: 10px;
+	background-color: var(--primario);
+	color: var(--blanco);
 }
 .otra {
 	padding: 4px;
-	background-color: #000;
+	background-color: var(--primario);
 	color: white;
 }
 #adopta:hover {
@@ -96,12 +105,12 @@ footer .sociales label {
 }
 
 #leermas {
-	background-color: #587ffc;
-	color: #fff;
+	background-color: var(--primario);
+	color: var(--blanco);
 	border: none;
 	cursor: pointer;
 	padding: 10px;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 #leermasinfo {
 	display: none;
