--- a/packages/app/public/css/estilosAc.css
+++ b/packages/app/public/css/estilosAc.css
@@ -3,7 +3,13 @@
 @import url(img1.css);
 @import url(blog.css);
 @import url(info.css);
-
+:root {
+	--blanco: #ffffff;
+	--negro: #000000;
+	--primario: #36bed9;
+	--secundario: #323333;
+	--opcional: #e6e6e6;
+}
 * {
 	margin: 0;
 	padding: 0;
@@ -13,8 +19,8 @@
 header {
 	width: 100%;
 	height: 50px;
-	background: #333;
-	color: #fff;
+	background: var(--primario);
+	color: var(--blanco);
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -56,4 +62,3 @@ footer .sociales label {
 	color: #333;
 	text-decoration: none;
 }
-
