--- a/packages/app/public/css/menu.css
+++ b/packages/app/public/css/menu.css
@@ -1,3 +1,10 @@
+:root {
+	--blanco: #ffffff;
+	--negro: #000000;
+	--primario: #36bed9;
+	--secundario: #323333;
+	--opcional: #e6e6e6;
+}
 nav.menu {
 	display: none;
 }
@@ -14,17 +21,17 @@ header label {
 	left: 80%;
 	width: 20%;
 	height: 200px;
-	background: #000;
+	background: var(--primario);
 	text-align: left;
 }
 .menu a {
 	display: block;
-	color: #fff;
+	color: var(--blanco);
 	height: 50px;
 	text-decoration: none;
 	height: 50px;
 	padding: 15px;
-	border-bottom: 1px solid #43a0df;
+	border-bottom: 1px solid var(--blanco);
 }
 .menu a:hover {
 	background: rgba(255, 255, 255, 0.3);
