--- a/packages/app/public/css/stylend.css
+++ b/packages/app/public/css/stylend.css
@@ -137,13 +137,13 @@ body {
 	width: 100%;
 }
 .search label input {
+	border: 0;
 	width: 100%;
 	height: 1.3rem;
 	border-radius: 1rem;
 	padding: 0.3rem 1rem;
 	padding-left: 35px;
 	outline: none;
-	border: 1px solid rbga(0, 0, 0, 0.2);
 	background: val(--blanco);
 }
 .user {
