--- a/packages/app/public/css/estilos.css
+++ b/packages/app/public/css/estilos.css
@@ -15,6 +15,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+.alinear {
 	text-align: justify;
 }
 body {
@@ -106,7 +108,6 @@ footer .sociales label {
 }
 
 #leermas {
-	
 	background-color: var(--primario);
 	color: var(--blanco);
 	border: none;
