--- a/packages/app/public/css/stylend.css
+++ b/packages/app/public/css/stylend.css
@@ -214,3 +214,130 @@ body {
 .cardHeader h2 {
 	font-weight: 600;
 }
+
+/* ##############
+Craer evento
+#################*/
+.Crear-evento {
+	width: 500px;
+	background: var(--primario);
+	padding: 40px 30px;
+	margin: auto;
+	margin-top: 80px;
+	border-radius: 4px;
+	font-family: "bold";
+	color: var(--blanco);
+}
+.Crear-evento h4 {
+	font-size: 30px;
+	margin-bottom: 20px;
+}
+.controls {
+	border: none;
+	border-bottom: 2px solid var(--blanco);
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: var(--blanco);
+	font-size: 20px;
+	width: 100%;
+	margin-bottom: 20px;
+}
+.Crear-evento p {
+	height: 40px;
+	text-align: center;
+	font-size: 18px;
+	line-height: 40px;
+}
+.Crear-evento a {
+	color: var(--blanco);
+	text-decoration: none;
+}
+.Crear-evento a:hover {
+	color: var(--negro);
+	text-decoration: none;
+}
+
+.Crear-evento .botons {
+	width: 100%;
+	background: var(--blanco);
+	border: none;
+	padding: 12px;
+	color: var(--negro);
+	margin: 16px 0;
+	font-size: 16px;
+	border-radius: 20px;
+}
+.contenedor {
+	width: 98%;
+	margin: auto;
+}
+
+h1 {
+	float: left;
+}
+header .contenedor {
+	display: table;
+}
+section {
+	width: 100%;
+	margin-botton: 25px;
+}
+#bienvenidos {
+	text-align: center;
+	padding: 60px 30px;
+}
+footer .contenedor {
+	text-align: center;
+	flex-wrap: wrap;
+	justify-context: center;
+	padding-bottom: 25px;
+}
+.copy {
+	font-size: 20px;
+}
+footer .sociales {
+	width: 100%;
+	text-align: center;
+	font-size: 28px;
+}
+footer .sociales label {
+	color: var(--secundario);
+	text-decoration: none;
+}
+
+#adopta {
+	background-color: var(--primario);
+	color: var(--blanco);
+	border: none;
+	cursor: pointer;
+	padding: 10px;
+	border-radius: 10px;
+}
+.rojo {
+	padding: 10px;
+	text-decoration: none;
+	border-radius: 10px;
+	background-color: var(--primario);
+	color: var(--blanco);
+}
+.otra {
+	padding: 4px;
+	background-color: var(--primario);
+	color: white;
+}
+#adopta:hover {
+	background-color: aqua;
+}
+
+#leermas {
+	background-color: var(--primario);
+	color: var(--blanco);
+	border: none;
+	cursor: pointer;
+	padding: 10px;
+	border-radius: 10px;
+}
+#leermasinfo {
+	display: none;
+}
