--- a/packages/app/public/css/stylend.css
+++ b/packages/app/public/css/stylend.css
@@ -195,16 +195,20 @@ body {
 .details {
 	position: relative;
 	width: 100%;
-	padding: 1.2rem;
+	padding: 1.6rem;
 	padding-top: 0;
 	display: grid;
+	grid-gap: 1.5rem;
 	grid-template-columns: 2fr 1fr;
 }
 .details .recentOrders {
 	position: relative;
 	display: grid;
-	min-height: 33rem;
-	margin-right: 5rem;
+	min-height: 10rem;
+	background: var(--blanco);
+	margin-right: 3rem;
+	border-radius: 0.5rem;
+	padding: 1.5rem;
 }
 .cardHeader {
 	display: flex;
@@ -214,7 +218,129 @@ body {
 .cardHeader h2 {
 	font-weight: 600;
 }
-
+.btn {
+	position: relative;
+	margin-top: 1.2rem;
+	padding: 0.3rem 0.8rem;
+	background: var(--primario);
+	color: var(--blanco);
+	text-decoration: none;
+	border-radius: 0.6rem;
+}
+.btn-r {
+	position: relative;
+	margin-top: 1.2rem;
+	padding: 0.3rem 0.8rem;
+	background: var(--secundario);
+	color: var(--blanco);
+	text-decoration: none;
+	border-radius: 0.6rem;
+}
+.details table {
+	width: 100%;
+	border-collapse: collapse;
+	margin-top: 0.8rem;
+}
+.details table thead td {
+	font-weight: 600;
+}
+.details .recentOrders table tr {
+	border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
+}
+.details .recentOrders table tbody tr:last-child {
+	border-bottom: none;
+}
+.details .recentOrders table tbody tr:hover {
+	background: var(--negro);
+	color: var(--blanco);
+}
+.details .recentOrders table tr td {
+	padding: 0.8rem 0.4rem;
+}
+.details .recentOrders table thead tr td:last-child,
+.details .recentOrders table tbody tr td:last-child {
+	text-align: right;
+}
+.details .recentOrders table thead tr td:nth-child(2),
+.details .recentOrders table tbody tr td:nth-child(2) {
+	text-align: right;
+	padding-right: 1.3rem;
+}
+.details .recentOrders table thead tr td:nth-child(3),
+.details .recentOrders table tbody tr td:nth-child(3) {
+	text-align: center;
+}
+.status {
+	padding-right: 2rem;
+	padding-left: 2rem;
+}
+.details .recentCustomers {
+	position: relative;
+	display: grid;
+	min-height: 1.5rem;
+	background: var(--blanco);
+	padding: 1.5rem;
+	border-radius: 0.5rem;
+	width: 22rem;
+}
+@media (max-width: 58rem) {
+	.navigation {
+		left: -300px;
+	}
+	.navigation .active {
+		left: 0rem;
+		width: 300px;
+	}
+	.main {
+		width: 100%;
+		left: 0;
+	}
+	.main .active {
+		width: calc(100% - 300px);
+		left: 300px;
+	}
+	.cardbox {
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.details {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+@media (max-width: 480px) {
+	.cardHeader h2 {
+		font-weight: 600;
+		font-size: 18px;
+	}
+	.details .recentOrders {
+		overflow-x: auto;
+	}
+	.details .recentOrders table {
+		width: 600px;
+	}
+	.navigation {
+		width: 100%;
+		left: -100%;
+		z-index: 1000;
+	}
+	.navigation .active {
+		width: 100%;
+		left: 0;
+	}
+	.toggle .active {
+		z-index: 1000;
+		right: 0;
+		left: initial;
+		position: fixed;
+	}
+	.toggle .active:before {
+		color: var(--blanco);
+	}
+	.main,
+	.main .active {
+		width: 100%;
+		left: 0;
+	}
+}
 /* ##############
 Craer evento
 #################*/
