--- a/packages/app/public/css/stylend.css
+++ b/packages/app/public/css/stylend.css
@@ -341,6 +341,58 @@ body {
 		left: 0;
 	}
 }
+/*##############
+Julieth
+###############*/
+
+.actividadParticipante {
+	text-align: justify ;
+}
+.actividadParticipante a{
+	display:flex;
+	justify-content: center;
+}
+.cardboxx {
+	position: relative;
+	transform: translateX(30%) translateY(40%);
+	width: 100%;
+	padding: 2rem;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 1.2rem;
+	
+}
+.cardboxx .card {
+	position: relative;
+	background: var(--blanco);
+	padding: 2rem;
+	display: flex;
+	justify-content: space-between;
+	cursor: pointer;
+	margin-right: 50px;
+	border-radius: 0.5rem;
+	
+}
+.cardboxx .card .numbers {
+	position: relative;
+	font-size: 2rem;
+	font-weight: 500;
+	
+}
+.cardboxx .card .cardName {
+	color: #8f8c8c;
+	
+}
+.cardboxx .card .iconBox {
+	font-size: 2.5rem;
+}
+@media (max-width: 58rem) {
+
+	.cardboxx {
+		grid-template-columns: repeat(1, 1fr);
+	}
+
+}
 /* ##############
 Craer evento
 #################*/
