--- a/packages/app/public/css/fontello.css
+++ b/packages/app/public/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: "fontello";
-	src: url("../font/fontello.eot?32709650");
-	src: url("../font/fontello.eot?32709650#iefix") format("embedded-opentype"),
-		url("../font/fontello.woff2?32709650") format("woff2"),
-		url("../font/fontello.woff?32709650") format("woff"),
-		url("../font/fontello.ttf?32709650") format("truetype"),
-		url("../font/fontello.svg?32709650#fontello") format("svg");
+	src: url("../font/fontello.eot");
+	src: url("../font/fontello.eot") format("embedded-opentype"),
+		url("../font/fontello.woff2") format("woff2"),
+		url("../font/fontello.woff") format("woff"),
+		url("../font/fontello.ttf") format("truetype"),
+		url("../font/fontello.svg") format("svg");
 	font-weight: normal;
 	font-style: normal;
 }
