--- a/packages/app/public/css/banner.css
+++ b/packages/app/public/css/banner.css
@@ -1,42 +1,51 @@
-#banner {
-    margin-top: 50px;
-    position: relative;
-    
+:root {
+	--blanco: #ffffff;
+	--negro: #000000;
+	--primario: #36bed9;
+	--secundario: #323333;
+	--opcional: #e6e6e6;
 }
-
+#banner {
+	margin-top: 50px;
+	position: relative;
+}
 
 #banner img {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
-#banner .contenedor{
-    position: absolute;
-    top: 65%;
-    left: 99%;
-    transform: translateX(-100%) translateY(-125%);
-    color: rgb(2, 2, 2);
-    text-align: center;
-
+#banner .contenedor {
+	position: absolute;
+	top: 65%;
+	left: 99%;
+	transform: translateX(-100%) translateY(-125%);
+	color: ;
+	text-align: center;
+	font-size: 1.3rem;
+	font-weight: 500;
+}
+#banner p {
+	text-align: justify;
 }
 #banner h2 {
-    font-size:28px;
+	font-size: 28px;
 }
 #banner a {
-    display: block;
-    width: 100% px;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-    margin-top: 10px;
-    border: 3px slid #fff;
+	display: block;
+	width: 80% px;
+	color: #fff;
+	text-decoration: none;
+	padding: 10px;
+	margin-top: 10px;
+	border: 3px slid #fff;
+	background: var(--primario);
 }
 
-#banner a:hover{
-    background: rgba(51,51,51,0.5);
+#banner a:hover {
+	background: var(--secundario);
 }
 
-.banner__txt{
-    display: none;
+.banner__txt {
+	display: none;
 }
-
