--- a/packages/app/public/css/stylend.css
+++ b/packages/app/public/css/stylend.css
@@ -519,3 +519,67 @@ footer .sociales label {
 #leermasinfo {
 	display: none;
 }
+/* Carlos */
+.hover-fill .card:hover {
+	background-color: var(--opcional);
+	cursor: pointer;
+}
+
+.div_duo {
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 1.2rem;
+}
+
+.circle {
+	border-radius: 100%;
+}
+
+.img_participante {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+
+.img_participante img {
+	width: 48px;
+	height: 48px;
+}
+
+.img_participante label {
+	padding-top: 15px;
+	padding-left: 12px;
+}
+
+.scroll {
+	overflow-y: auto;
+	overflow-x: auto;
+}
+
+.scroll::-webkit-scrollbar {
+    width: 0.5em;
+    height: 0.5em;
+}
+
+.scroll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.scroll::-webkit-scrollbar-thumb {
+	background-color: var(--primario);
+	/* outline: 1px solid var(--primario); */
+}
+
+@media (max-width: 58rem) {
+
+	#detail_activity {
+		margin-right: 3rem !important;
+	}
+
+	#act_recomentadas .card {
+		padding: 10px 20%;
+	}
+
+}
+/* Fin Carlos */
