--- a/Regna/css/style.css
+++ b/Regna/css/style.css
@@ -7,13 +7,6 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-:root {
-	--blanco: #ffffff;
-	--negro: #000000;
-	--primario: #36bed9;
-	--secundario: #323333;
-	--opcional: #e6e6e6;
-}
 body {
   background: #fff;
   color: #666666;
@@ -509,7 +502,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-container .background {
   min-height: 300px;
-  background: url(../../app/public/img/banner.jpg) center top no-repeat;
+  background: url(../../Frijolitos/packages/app/public/img/banner.jpg) center top no-repeat;
   margin-bottom: 10px;
 }
 
@@ -695,13 +688,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   #call-to-action .cta-btn-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
   }
 }
-#call-to-action .cta-btn2 {
-font-family: "Poppins", sans-serif ;
-padding: 0rem 1rem;
-} 
+
 #call-to-action .cta-btn {
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
@@ -709,13 +699,12 @@ padding: 0rem 1rem;
   font-size: 16px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 1rem;
-  border-radius: 10px;
+  padding: 8px 30px;
+  border-radius: 50px;
   transition: 0.5s;
   margin: 10px;
-  margin-left: 50px;
-  border: 2px solid var(--blanco);
-  color: var(--blanco);
+  border: 2px solid #fff;
+  color: #fff;
 }
 
 #call-to-action .cta-btn:hover {
