--- a/packages/app/public/css/menuAc.css
+++ b/packages/app/public/css/menuAc.css
@@ -1,7 +1,7 @@
 :root {
 	--blanco: #ffffff;
 	--negro: #000000;
-	--primario: #36bed9;
+	--primario: #3a4142f5;
 	--secundario: #323333;
 	--opcional: #e6e6e6;
 }
